<resources>
    <string name="app_name">9–1–1 Test</string>
    <string name="logo_description">NCT911 logo</string>

    <!-- Used in the Home Activity -->
    <string name="welcome">Welcome to the NCT9–1–1 simulation application!</string>
    <string name="start_app">Get Started</string>
    <string name="settings">Change Language</string>
    <string name="survey"><u>Need the survey?</u></string>
    <string name="choose_language">Choose Language…</string>
    <string name="choose_role">Choose Device Role…</string>
    <string name="temp_student">Student</string>
    <string-array name="device_roles">
        <item>Teacher</item>
        <item>Student</item>
    </string-array>

    <!-- Used in the Email Activity -->
    <string name="send_survey">Enter your email to have the survey sent to you.</string>
    <string name="send_survey_hint">enter your email here</string>
    <string name="submit_email">Submit</string>
    <string name="survey_file_name">9_1_1_Survey.pdf</string>
    <string name="no_internet">Please check your internet connection and restart the app.</string>

    <!-- Used in the Connect Activity -->
    <string name="discover">Discover</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection_status">Connection Status</string>
    <string name="connection_status2">Unpaired Device</string>
    <string name="device_name">Device Identity</string>
    <string name="pair_devices">Pair Devices</string>

    <!-- Activity Connect  -->
    <string name="connect_start">Searching for nearby devices</string>
    <string name="display_name">Enter a display name:</string>
    <string name="select_contacts">Select a contact to call</string>
    <string name="update_contacts">Update Contacts</string>
    <string name="call_contacts">Call Contacts</string>

    <!-- Used in the SimulatedHomeScreen Activity -->
    <string name="phone_description">phone icon</string>
    <string name="maps_icon_title">Maps</string>
    <string name="simulation_warning">SIMULATION</string>
    <string name="fortnite_icon_title">Fortnite</string>
    <string name="button_glow">Indication glow</string>
    <string name="fornite_description">Simulated fortnite button</string>
    <string name="messaging_button_description">Simulated messaging button</string>
    <string name="mail_icon_description">Simulated mail button</string>
    <string name="chrome_icon_description">Simulated Chrome button</string>
    <string name="maps_icon_description">Simulated maps button</string>

    <!-- Used in SimulatedDialpad Activity -->
    <string name="number_description">number dial icon</string>
    <string name="symbol_description">symbol dial icon</string>
    <string name="call_description">call icon</string>
    <string name="backspace">backspace image</string>

    <!--menu directory (connections) -->
    <string name="action_settings">Settings</string>

    <!-- Used in Make call activity -->
    <string name="incoming_call">Incoming call</string>
    <string name="accept_call">Accept</string>
    <string name="reject_call">Reject</string>

    <!-- Used in make call activity -->
    <string name="calling">Calling</string>

    <!-- Used in receive call activity & make a call -->
    <string name="end_call">End call</string>
    <string name="receive_call_callerid">Student\'s Phone ID</string>
    <string name="receive_call_simulation">THIS IS A SIMULATION</string>
    <string name="receive_call_date">Feb 17</string>
    <string name="receive_call_placeholder">Student</string>
    <string name="make_call_contact_name">Contact Name</string>
    <string name="make_call_ip_address">IP Address</string>
    <string name="make_call_time_elapased">00:00 </string>
    <string name="make_call_add_call">Add Call </string>
    <string name="make_call_bluetooth">Bluetooth </string>
    <string name="make_call_video_call">Video Call </string>
    <string name="make_call_speaker">Speaker</string>
    <string name="make_call_mute">Mute</string>
    <string name="make_call_dialpad">Dialpad</string>

    <!-- Student scenario-->
    <string name="scenario_toolbar">The Scenario</string>
    <string name="scenario_start">Start Simulation</string>
    <string name="scenario_default_text">Default Text</string>
    <string name="scenario_file_name">scenarios.txt</string>
    <string name="scenario_regen">New Scenario</string>
    <string name="ttsIcon">Text To Speech Icon</string>

    <!--Teacher student-->
    <string name="teacher_toolbar">Teacher</string>
    <string name="waiting_for_call">Waiting for Student</string>
    <string name="return_to_home">Return to Home</string>
    <string name="connect_wait_message">Please wait for the other device\'s ID to appear below and then select it to connect.</string>


</resources>
